@@ -106,7 +106,8 @@ admin.title.virtualwiki=Tilf\u00F8j virtuel wiki
 admin.usergrouptype.database=Database
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Kategorier
-allimages.title=All Files
+allfiles.title=All Files
+allimages.title=All Images
 alltopics.title=Alle emner
 common.add=Tilf\u00F8j
 common.back=Tilbage
