@@ -106,7 +106,8 @@ admin.title.virtualwiki=Virtu\u00E1lis wiki hozz\u00E1ad\u00E1sa
 admin.usergrouptype.database=adatb\u00E1zis
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Kateg\u00F3ri\u00E1k
-allimages.title=All Files
+allfiles.title=All Files
+allimages.title=All Images
 alltopics.title=\u00D6sszes sz\u00F3cikk
 common.add=Hozz\u00E1ad
 common.back=Vissza
