@@ -106,7 +106,8 @@ admin.title.virtualwiki=Aggiungi un wiki virtuale
 admin.usergrouptype.database=Database
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Categories
-allimages.title=All Files
+allfiles.title=All Files
+allimages.title=All Images
 alltopics.title=All Topics
 common.add=Aggiungi
 common.back=Indietro
