@@ -106,7 +106,8 @@ admin.title.virtualwiki=Virtual Wiki toevoegen
 admin.usergrouptype.database=Database
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Categories
-allimages.title=All Files
+allfiles.title=All Files
+allimages.title=All Images
 alltopics.title=All Topics
 common.add=Voeg toe
 common.back=Terug
