@@ -106,7 +106,8 @@ admin.title.virtualwiki=Legg til virtuell Wiki
 admin.usergrouptype.database=Database
 admin.usergrouptype.ldap=LDAP
 allcategories.title=Categories
-allimages.title=All Files
+allfiles.title=All Files
+allimages.title=All Images
 alltopics.title=All Topics
 common.add=Legg til
 common.back=Tilbake
