@@ -216,6 +216,9 @@
 		<name>Special:Export</name>
 	</pseudotopic>
 	<pseudotopic>
+		<name>Special:Filelist</name>
+	</pseudotopic>
+	<pseudotopic>
 		<name>Special:History</name>
 	</pseudotopic>
 	<pseudotopic>
