@@ -4,7 +4,8 @@
 * [[Special:TopicsAdmin|Csak adminisztrátorok számára elérhetõ lapok]]
 * [[Special:Allpages|Minden oldal]]
 * [[Special:Categories|Kategóriák]]
-* [[Special:Imagelist|All files]]
+* [[Special:Filelist|All files]]
+* [[Special:Imagelist|All images]]
 * [[Special:RecentChanges|Friss változások]]
 * [[Special:Search|Keresés]]
 * [[Special:Upload|Feltöltés]]
